# google-sheets-to-gitlab-markdown

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  cli.py  main.py  pyproject.toml  requirements.txt  settings.py  setup.py
package/: gitlab_client.py  google_client.py  sync.py
src/pvb_hashev/: __init__.py  gitlab_client.py  google_client.py  logger.py  sync.py
